# revenuedesk

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
revops/: __init__.py  agent.py  api.py  config.py  db.py  loaders.py  narrator.py  seed.py  signals.py  slack.py
revops/templates/: base.html  dashboard.html
revops/templates/partials/: board.html  run_response.html  summary.html
tests/: conftest.py  test_agent.py  test_api.py  test_ingestion.py  test_signals.py
