[project]
name = "revenuedesk"
version = "0.1.0"
description = "A miniature AI revenue operating system: warehouse + always-on agent + dashboard"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]
